# tacobridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tacobridge/: __init__.py  _constants.py  _exceptions.py  _logging.py  _metadata.py  _types.py  api.py  execute.py  finalize.py  plan.py
tests/: conftest.py  test_foo.py
tests/fixtures/: README.md  regenerate.py
tests/fixtures/folder/flat_a/: COLLECTION.json
tests/fixtures/folder/flat_a/DATA/: sample_000  sample_001  sample_002  sample_003  sample_004  sample_005  sample_006  sample_007  sample_008  sample_009
tests/fixtures/folder/flat_a/METADATA/: level0.parquet
tests/fixtures/folder/nested_a/: COLLECTION.json
tests/fixtures/folder/nested_a/DATA/folder_000/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested_a/DATA/folder_001/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested_a/DATA/folder_002/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested_a/DATA/folder_003/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested_a/DATA/folder_004/: __meta__  item_0  item_1  item_2
tests/fixtures/folder/nested_a/METADATA/: level0.parquet  level1.parquet
tests/fixtures/zip/deep/: deep.tacozip
tests/fixtures/zip/flat_a/: flat_a.tacozip
tests/fixtures/zip/flat_b/: flat_b.tacozip
tests/fixtures/zip/nested_a/: nested_a.tacozip
tests/fixtures/zip/nested_b/: nested_b.tacozip
tests/integration/: test_api.py  test_concat.py  test_roundtrip.py
tests/unit/: test_execute.py  test_finalize.py  test_logging.py  test_metadata.py  test_plan.py  test_types.py
